# opbirth2rata

./: Cargo.toml  README.md
src/: birth.txt  main.rs
