[package]
name = "opbirth"
version = "0.1.0"
description = "An example generated using the simple template"
authors = ["koushik <191687017+koushik255@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
chrono = "0.4.41"
ratatui-image = "8.0.1"
image = "0.25.6"
